--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,8 +1,10 @@
 
-database:
+port: "8080"
+
+db:
   host: "localhost"
-  port: 5432
+  port: "5432"
   user: "postgres"
-  password: "your_password"
+  password: "qwerty"
   dbname: "tables"
   sslmode: "disable"
